Fix for affix navbar flickering

--- a/source/stylesheets/_nav.sass
+++ b/source/stylesheets/_nav.sass
@@ -1,7 +1,9 @@
-
-nav
+#nav
   h2
     display: none
+  &.affix-top
+    position: relative
+    top: auto
   &.affix
     position: fixed
     top: 0
